# python-optimizer

./: .codecov.yml  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  WARP.md  debug_complete_flow.py  debug_execution.py  debug_specialization.py  debug_specialization_detailed.py  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  dependency-updates.yml  release.yml
docs/: api.md  branch_protection_setup.md  ci_cd_guide.md  distributed_computing.md  gpu_acceleration.md  gpu_testing.md  medium-press-release-v1.1.0.md  ml_optimization.md  optimization_overview.md  performance_guide.md  specialization_cache.md  tensorflow_optimization.md
examples/: README.md  advanced_optimization.py  basic_optimization.py  distributed_computing.py  distributed_computing_example.py  distributed_optimization.py  gpu_optimization.py  hft_simulation.py  ml_optimization.py  pytorch_optimization.py  quick_start.py  tensorflow_optimization.py  trading_strategy_example.py  variable_specialization.py
python_optimizer/: __init__.py  cli.py  specialization_cache.py
python_optimizer/benchmarks/: test_jit_performance.py
python_optimizer/core/: __init__.py  decorator.py  engine.py
python_optimizer/distributed/: __init__.py  backend.py  coordinator.py  decorator.py  genetic.py  jit_cache.py  spec_cache.py  worker.py
python_optimizer/genetic/: __init__.py  genetic_optimizer.py
python_optimizer/gpu/: __init__.py  device.py  dispatcher.py  genetic.py  kernels.py  memory.py
python_optimizer/jit/: __init__.py  jit_fitness_evaluator.py
python_optimizer/ml/: __init__.py  pytorch_optimizer.py  tensorflow_optimizer.py
python_optimizer/profiling/: __init__.py  advanced_profiler.py  profiler.py
python_optimizer/specialization/: __init__.py  analyzer.py  cache.py  dispatcher.py  engine.py  generators.py
scripts/: ci_cd_helper.py  release.py
tests/: test_basic.py  test_cli.py  test_core_modules.py  test_coverage_boost.py  test_distributed.py  test_edge_cases_coverage.py  test_genetic.py  test_gpu.py  test_gpu_benchmarks.py  test_gpu_integration.py  test_jit_evaluator.py  test_jit_profiling.py  test_ml.py  test_specialization.py  test_specialization_cache.py  test_specialization_cache_detailed.py  test_specialization_modules.py  test_specialization_performance.py  test_tensorflow.py
